# c-toxcore

./: .gitignore  CMakeLists.txt  LICENSE.api.h  README.md  circle.yml
.travis/: cmake-linux
auto_tests/: BUILD.bazel  Makefile.inc  conference_stress_test.c  conference_test.c  fakenet.cc  friend_request_test.c  group_load_save_test.c  group_reconnect_test.c  groupchat_test.c  helpers.h  lossless_packet_test.c  lossy_packet_test.c  monolith_test.cpp  onion_test.c  save_load_test.c  send_message_test.c  set_name_test.c  set_status_message_test.c  tox_test.c  typing_test.c
docs/: Group-Chats.md
other/: DHT_bootstrap.c  monolith.h
other/astyle/: format-source
other/bootstrap_daemon/docker/: Dockerfile.bazel
other/bootstrap_daemon/src/: tox-bootstrapd.c
other/rpm/: toxcore.spec.in
other/travis/: freebsd-install-stage1  toxcore-script
testing/: DHT_test.c  Messenger_test.c  av_test.c  misc_tools.c  misc_tools.h  nTox.c
testing/groupchats/: group_announce_test.c  group_bootstrap_n_chat.c  group_newpeers_dos_attack.c
toxav/: BUILD.bazel  audio.c  bwcontroller.c  groupav.c  groupav.h  monolith.h  msi.c  ring_buffer.c  rtp.c  toxav.api.h  toxav.c  toxav.h  toxav_old.c  video.c  video.h
toxcore/: BUILD.bazel  DHT.c  DHT.h  LAN_discovery.api.h  LAN_discovery.c  Makefile.inc  Messenger.c  Messenger.h  TCP_client.c  TCP_client.h  TCP_connection.c  TCP_connection.h  TCP_server.c  TCP_server.h  ccompat.h  crypto_core.api.h  crypto_core.c  crypto_core.h  crypto_core_mem.c  env.c  env.h  friend_connection.c  friend_connection.h  friend_requests.c  friend_requests.h  group.c  group.h  group_announce.c  group_announce.h  group_chats.c  group_chats.h  group_connection.c  group_connection.h  group_moderation.c  group_moderation.h  list.c  list.h  logger.c  logger.h  monolith.h  (+23 more)
toxencryptsave/: BUILD.bazel  monolith.h
