cc_library(
    name = "helpers",
    testonly = True,
    hdrs = [
        "check_compat.h",
        "helpers.h",
    ],
)

[cc_test(
    name = src[:-2],
    size = "small",
    srcs = [src],
    copts = ["-Wno-sign-compare"],
    deps = [
        ":helpers",
        ":monolith",
        "//c-toxcore/testing:misc_tools",
        "//c-toxcore/toxav",
        "//c-toxcore/toxcore",
        "//c-toxcore/toxencryptsave",
    ],
) for src in glob(["*_test.c"])]

cc_library(
    name = "monolith",
    deps = [
        "//c-toxcore/toxav:monolith",
        "//c-toxcore/toxcore:monolith",
        "//c-toxcore/toxencryptsave:monolith",
    ],
)

cc_library(
    name = "all_test_sources",
    hdrs = glob([
        "*.c",
        "*.h",
    ]),
)

cc_test(
    name = "monolith_test",
    size = "small",
    srcs = ["monolith_test.cpp"],
    copts = ["-Wno-sign-compare"],
    deps = [
        ":all_test_sources",
        ":helpers",
        ":monolith",
        "//c-toxcore/testing:misc_tools",
    ],
)
